objects/ServiceRequest__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the vehicle</description>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ServiceRequests</relationshipLabel>
        <relationshipName>ServiceRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FVehicles__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FVehicles</label>
        <referenceTo>FVehicles__c</referenceTo>
        <relationshipLabel>ServiceRequests</relationshipLabel>
        <relationshipName>ServiceRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional service details</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceCentre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location of service</description>
        <label>ServiceCentre</label>
        <referenceTo>ServiceCentre__c</referenceTo>
        <relationshipLabel>ServiceRequests</relationshipLabel>
        <relationshipName>ServiceRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Oil Change</fullName>
                </value>
                <value>
                    <fullName>Tire Rotation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ServiceRequest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ServiceRequest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ServiceRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>